# selective-search

./: CMakeLists.txt  README.md  cmake_install.cmake  demo_showhierarchy.py  features.py  requirements.txt  selective_search.py  setup.py
imdescrip.egg-info/: PKG-INFO  requires.txt
selectivesearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
